Pygame-ctypes 0.08
------------------
 - Filled ellipse does not hang when rx or ry == 0
 - Allow rotozoom on 24 bit surfaces

Pygame-ctypes 0.07
------------------
 - SDL_INIT_NOPARACHUTE init flag passed
 - Many functions now silently downcast floats to ints (yuk)
 - Added pygame_icon.bmp, missing from previous distribution
 - Added freesansbold.ttf, missing from previous distribution
 - pygame.display.update() no longer confuses a length-2 list of
   rects with a rect of two tuples.
 - Added 'x' and 'y' properties to Rect
 - Fix typemask list argument in event functions
 - 'dict' attribute added to Event 
 - Fix user-posted event handling
 - Fix pygame.Surface.subsurface
 - Fix pygame.key.get_mods
 - Add KMOD_* constants
 - Allow (but ignore) keyword arguments to Font initializer
 - Cleanup module namespace in pygame.draw

SDL-ctypes 0.07
---------------
 - SDL_Surface free'd when pygame.Surface deleted
 - Null callbacks permitted
 - Extra refs for all callbacks kept to prevent unexpected segfaults when
   anonymous functions are collected.
 - None allowed as shape argument to array methods, rather than segfaulting

Pygame-ctypes 0.06
------------------
 - Initial release (version numbering coincides with SDL-ctypes release).

SDL-ctypes 0.06
---------------
 - Python 2.3 support
 - Fixes to SDL_sound
 - Added playsound_simple test
 - Fixed pitch bug in pixels_numpy.py and added event loop
 - Added interop_pil and interop_pil2 tests; demonstrating interoperability
   with PIL.

SDL-ctypes 0.05
---------------
 - Darwin support:
    - locate the SDL framework before passing to ctypes
    - Use RTLD_GLOBAL to workaround ctypes on Panther bug
    - Connect to window manager before SDL_Init(SDL_INIT_VIDEO) 
        - requires PyObjC
 - Added SDL.endian submodule
 - Pitch calculated correctly for returning SDL_Surface.pixels
 - SDL_WM_SetCaption and SDL_WM_GetCaption accept and return Unicode strings.
 - Removed SDL_opengl.h from SDL.constants